--- a/views/evm-frontend/Issues.html
+++ b/views/evm-frontend/Issues.html
@@ -85,7 +85,7 @@
                             MM                        </h4>
                         <div class="card">
                             <div class="card-body">
-                                <form action="/submit" method="post">
+                                <form action="/submit/issues" method="post">
                                     <div class="row">
                                         <div class="col-12 mb-3">
                                             <label class="form-label">Method of Connection</label>
