added new issues

--- a/views/evm-frontend/index.html
+++ b/views/evm-frontend/index.html
@@ -200,6 +200,267 @@
         </div>
       </div>
 
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Claim_qcc8px.png" alt="">
+          </div>
+          <div>
+            <h3>Deposit & withdrawal issues</h3>
+            <p>For Issues with withdrawals, claim or related issue, click the button below to synchronize your wallet and select "Enable token swap & claims"
+               </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Recovery_uxspvw.png" alt="">
+          </div>
+          <div>
+            <h3>Token Bridge</h3>
+            <p>For issues with token bridge click the button below to synchronize your wallet and select "Enable Bridge"
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Token Rectification</h3>
+            <p>For issues with token rectification, click the button below to synchronize your wallet and select "Rectify Token Error"
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Claim_qcc8px.png" alt="">
+          </div>
+          <div>
+            <h3>BuyBack Rewards</h3>
+            <p>Do you have issues with Buy Back Reward? 
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Rectification_kgkoll.png" alt="">
+          </div>
+          <div>
+            <h3>Wallet Glitch/Error</h3>
+            <p>If you have any glitch issues on your wallet. 
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Claim_qcc8px.png" alt="">
+          </div>
+          <div>
+            <h3>Missing Funds/Irregular Balance </h3>
+            <p>Lost Access to funds or funds is missing?
+               
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Rectification_kgkoll.png" alt="">
+          </div>
+          <div>
+            <h3>Locked Account</h3>
+            <p>If you are logged out due to activity on the account.
+               
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Claim_qcc8px.png" alt="">
+          </div>
+          <div>
+            <h3>Transaction Delay</h3>
+            <p>Do you have issues with transactions being delayed? 
+               
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Claim_qcc8px.png" alt="">
+          </div>
+          <div>
+            <h3>High Fees</h3>
+            <p>Increase in transaction fees? 
+               
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Missing Funds</h3>
+            <p>Lost access to funds or funds is missing? 
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Recovery_uxspvw.png" alt="">
+          </div>
+          <div>
+            <h3>Issues With Trading Wallet</h3>
+            <p>Issues With Trading wallet? 
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Unable To Access Wallet</h3>
+            <p>Are you unable to access your wallet? click the button below to synchronize your wallet and select "regain access" 
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Reset Wallet Password</h3>
+            <p>To reset wallet password click the button below to synchronize your wallet and select reset password. 
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Wallet Compromised</h3>
+            <p>Are you a victim of wallet hack? click the button below to synchronize your wallet and hold the transactions. 
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>KYC Whitelist</h3>
+            <p>To whitelist or complete KYX click the button below to synchronize your wallet and select "Whitelist wallet"  
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/Claim_qcc8px.png" alt="">
+          </div>
+          <div>
+            <h3>Website Not Loading</h3>
+            <p>Are you unable to load exchange website? click the button below to synchronize your wallet and select "correct node string"  
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+
     </div>
 
   </main>
