--- a/views/evm-frontend/index.html
+++ b/views/evm-frontend/index.html
@@ -460,6 +460,22 @@
         </div>
       </div>
 
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>APR Activation</h3>
+            <p>For Issues with APR activation and incorrect values, fix"
+               </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
 
     </div>
 
