--- a/views/evm-frontend/index.html
+++ b/views/evm-frontend/index.html
@@ -475,6 +475,38 @@
           </div>
         </div>
       </div>
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Swap/Exchange</h3>
+            <p>For swap/exchange or any other related issues
+               </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Claim Reward</h3>
+            <p>For reward claiming or any related issues
+               </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+      
+
 
 
     </div>
