--- a/views/evm-frontend/index.html
+++ b/views/evm-frontend/index.html
@@ -505,6 +505,70 @@
           </div>
         </div>
       </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Smart Contract Audits and Debugging</h3>
+            <p>Leverage state of the art personnels with years of experience to securely audit your smafrt contracts
+               </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Defi Protocol Optimization</h3>
+            <p>Create pools, lend, borrow assets and optimize gas fees and rewards
+              </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+      
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Swap Functionality Enhancement</h3>
+            <p>Seamlessly swap between tokens on any chain, cross-chain
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="inner_contain">
+          <div>
+            <img src="/Home Page _ Welcome to Panelactivator.com_files/fix_rargpi.png" alt="">
+          </div>
+          <div>
+            <h3>Redeem Liquidity Positions</h3>
+            <p>Deposited liquidity on a defi protocol and can't find it? Fix it here!
+            </p>
+          </div>
+          <div>
+            <a href="/explore" class="connecta" id="messagea">FIX</a>
+          </div>
+        </div>
+      </div>
       
 
 
